# rdm-android

./: FILE_SUMMARY.md  QUICKSTART.md  README.md  setup.sh
.github/workflows/: build-android-minimal.yml  build-android.yml  build-android.yml.disabled
android-app/: codemagic.yml  gradlew  local.properties  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest-minimal.xml  AndroidManifest.xml
android-app/app/src/main/java/com/rdm/client/: BootReceiver.kt  DeviceInfo.kt  MainActivity-minimal.kt  MainActivity.kt  MainActivitySimple.kt  RdmService.kt  RootExecutor.kt  WebSocketClient.kt
android-app/app/src/main/res/layout/: activity_main_minimal.xml
android-app/app/src/main/res/values/: strings.xml  strings_minimal.xml  themes.xml
docs/: API.md  PROTOCOL.md  SECURITY.md
server/: .env  Cargo.toml
server/src/: api.rs  auth.rs  database.rs  devices.rs  main.rs  websocket.rs
server/web/: dashboard.html  index.html  simple.html  test.html
tui/: .env  Cargo.toml  IMPROVEMENTS.md
tui/src/: client.rs  main.rs  monitor.rs  ui.rs
