[package]
name = "rdm-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-ws = "0.3"
actix-cors = "0.7"
actix-files = "0.6"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TLS
rustls = "0.23"
rustls-pemfile = "2.1"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
rand = "0.8"
