[package]
name = "rdm-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI framework
ratatui = "0.26"
crossterm = "0.27"

# WebSocket
tokio-tungstenite = "0.21"
tungstenite = "0.21"
url = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Time
chrono = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenv = "0.15"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
textwrap = "0.16"
